fixat med footer

--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
             <div class="menu-item"><a href="https://github.com/Delzarkafashi?tab=projects" target="_blank" title="Se mina projekt"><i class="fa">&#xf085;</i>Projekts</a></div>
             <div class="menu-item"><a href="kontakt.html" title="Kontakta mig"><i class="fa">&#xf2bb;</i>
             Kontakta mig</a></div>
-            <div class="menu-item"><a href="/MinCV/Här min cv och personligt brev.pdf" target="_blank" title="Se mitt CV"><i class="fa">&#xf1c2;</i>
+            <div class="menu-item"><a href="/MinCV/Här min cv och personligt brev.pdf" target="_blank" title="Se mitt CV">
+                <img class="meny-bild" src="images/cv-bild2.png" alt="en bild på cv" /> CV</a>
+                
+                <!---
+                <a href="/MinCV/Här min cv och personligt brev.pdf" target="_blank" title="Se mitt CV"><i class="fa">&#xf1c2;</i>
             CV</a></div>
+
+            <a href="/MinCV/Här min cv och personligt brev.pdf" target="_blank" title="Se mitt CV">
+                <img src="dinbild.jpg" alt="Din bild" /> CV</a>
+            -->  
+
+
+            
 
         </section>  
 
