fixat med fb,inta,linking icons

--- a/index.html
+++ b/index.html
@@ -155,9 +155,14 @@
         <br>
         <br>
             <div class="container-sm">
-                <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit" target="_blank"> <i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/din-facebook-profil" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/din-instagram-profil" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit" target="_blank"> <img class="SM-bild" 
+                    src="images/linkedin-bild1.png" alt="linkedin icon" ></i></a>
+
+                <a href="https://www.facebook.com/din-facebook-profil" target="_blank"><img class="SM-bild"
+                    src="images/facebook-bild1.png" alt="facebook icon"></i></a>
+
+                <a href="https://www.instagram.com/din-instagram-profil" target="_blank"><img class="SM-bild" 
+                    src="images/instagram-bild1.png" alt="instagram icon"></i></a>
             </div>
         </div>
     </footer>
