--- a/index.html
+++ b/index.html
@@ -67,10 +67,8 @@
         
          
     </header>
-
-
-    <h1 class="container" style="color: black; margin-top: 150px;">wheiwehiawe</h1>
-
+    <br>
+    <br>
 
     <img class="image-centered" src="images/delzarr.jpg" alt="delzar bild">
     <section class="text-container">
@@ -90,7 +88,8 @@
             <p>kisa 12345</p>
             <p>standgatank 2332</p>
 
-        <a href="tel:0709224098">Mobilnummer: 0709224098</a>
+        <a href="tel:0709224098">Mobilnummer: 0709224098</a> <br>
+        <a href="mailto:Delzarkafashi@gmail.com">Kontakta oss via e-post</a>
         <br>
         <br>
             <div class="container-sm">
